--- a/config.yaml
+++ b/config.yaml
@@ -43,18 +43,10 @@ google:
       # available filters.limit [ upper, lower ]
       filters:
         # example
-        - name: temperature
-          limit: upper
-          threshold: 35
-        - name: temperature
-          limit: lower
-          threshold: 0
         - name: co2
           limit: upper
           threshold: 1500
-        - name: co2
-          limit: lower
-          threshold: 300
+
 
 module:
   # relay module
@@ -85,7 +77,7 @@ module:
     use: True # or False
     scheduler:
       day_of_week: [ monday, tuesday, wednesday, thursday, friday, saturday, sunday ]
-      at_time: ["08:00:00"]
+      at_time: ["08:00:00","08:40:00","08:42:00","17:00:00"]
     # video capture frame settings
     settings:
       width: 1280
@@ -110,4 +102,4 @@ sensor:
     decrypt: False # or True
   # distance, light sensor
   vl6180:
-    use: True # or False
+    use: False # or False
